# livraria

./: .isort.cfg  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_alter_autor_email_alter_categoria_descricao_and_more.py  0003_autor_livro.py
core/models/: categoria.py  livro.py  usuario.py
core/serializers/: livro.py
livraria/: settings.py  urls.py  wsgi.py
