[tool.poetry]
name = "livraria"
version = "0.1.0"
description = ""
authors = ["vegapunkk <senjuruben@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.0"
python-magic = "^0.4.27"
pillow = "^9.3.0"
drf-spectacular = "^0.25.1"
django-environ = "^0.9.0"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
isort = "^5.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
